--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@tauri-apps/api": "^2.7.0",
     "@tauri-apps/plugin-dialog": "^2.3.2",
     "@tauri-apps/plugin-fs": "^2.4.1",
+    "@tauri-apps/plugin-http": "^2.5.1",
+    "@tauri-apps/plugin-store": "^2.3.0",
     "pdfjs-dist": "^5.4.54",
     "react": "^19.1.1",
     "react-dom": "^19.1.1"
