--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "devDependencies": {
     "@eslint/js": "^9.32.0",
     "@tauri-apps/cli": "^2.7.1",
+    "@types/crypto-js": "^4.2.2",
     "@types/react": "^19.1.9",
     "@types/react-dom": "^19.1.7",
     "@vitejs/plugin-react": "^4.7.0",
