--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "crypto-js": "^4.2.0",
     "pdfjs-dist": "^5.4.54",
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "react-icons": "^5.5.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.32.0",
