--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -29,3 +29,4 @@ tauri-plugin-http = "2"
 tauri-plugin-store = "2"
 base64 = "0.21"
 uuid = { version = "1.0", features = ["v4"] }
+lazy_static = "1.4"
