--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -30,3 +30,17 @@ tauri-plugin-store = "2"
 base64 = "0.21"
 uuid = { version = "1.0", features = ["v4"] }
 lazy_static = "1.4"
+
+# Windows OCR dependencies
+[target.'cfg(windows)'.dependencies.windows]
+version = "0.30"
+features = [
+    "alloc",
+    "Media_Ocr", 
+    "Graphics_Imaging", 
+    "Storage_Streams", 
+    "Foundation",
+]
+
+[target.'cfg(windows)'.dependencies]
+futures = "0.3.5"
